# regatta-tracker-management

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  meson.build  rgt-management.config  rgt-management.properties
lua_scripts/: rpush_if_exists.lua
src/app/: main.cpp
src/platform/: ManagementFactory.cpp  ManagementFactory.h  ManagementServer.cpp  ManagementServer.h  Utils.cpp  Utils.h
src/platform/Handlers/: CreateRaceHandler.cpp  CreateRaceHandler.h  EndRaceHandler.cpp  EndRaceHandler.h  StartRaceHandler.cpp  StartRaceHandler.h
src/platform/handlers/: CreateRaceHandler.cpp  CreateRaceHandler.h  EndRaceHandler.cpp  EndRaceHandler.h  StartRaceHandler.cpp  StartRaceHandler.h  test.h
tests/: CreateRaceTests.cpp  meson.build
